--- a/a.html
+++ b/a.html
@@ -6,6 +6,7 @@ include_once "view/head.php"
 <h3>aqui va todo lode mi portada</h3>
 <h3>aqui va ejemplo de github</h3>
 <h3>aqui va ejemplo de github02</h3>
+<h3>aqui va ejemplo de github03</h3>
 
 
 
